[workspace]
resolver = "2"
members = []

[package]
name = "bevy_pgc_splines"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
# TODO: import only necessary features
bevy = "0.12.1"

[dev-dependencies]
bevy_flycam = "*"